--- a/index.html
+++ b/index.html
@@ -2,14 +2,31 @@
 <html lang="fr">
 
 <head>
+
     <meta charset="utf-8"  />
     <title>Reservia - Votre hébergement pour des vacances de rêve</title>
+    <link rel="stylesheet" href="style.css">
+    
+    <!-- Font "Raleway" by Google Fonts-->
+    <style>@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');</style> 
+
 </head>
 
 <body>
 
+<section class="widthSite">
 <!-- Header : Logo and nav bar -->
     <header>
+        <div class="logo">
+            <img src="images/Reservia.svg">
+        </div>
+        <div class="navBar">
+            <li>
+                <ul><a href="#">Hébergements</a></ul>
+                <ul><a href="#">Activités</a></ul>
+                <ul class="subscribeLink"><a href="#">S'inscrire</a></ul>
+            </li>
+        </div>
     </header>
 
 <!-- Section 1 Search Bar -->
@@ -27,6 +44,8 @@
 <!-- Footer -->
     <footer>
     </footer>
+
+</section>
 
 </body>
 
