Add a Search Bar (Section 1)

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     <!-- Font "Raleway" by Google Fonts-->
     <style>@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');</style> 
 
+    <!-- fontawesome icon kit-->
+    <script src="https://kit.fontawesome.com/71c57ed8eb.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
 
 <section class="widthSite">
+
 <!-- Header : Logo and nav bar -->
     <header>
         <div class="logo">
@@ -29,8 +33,21 @@
         </div>
     </header>
 
-<!-- Section 1 Search Bar -->
-    <section id="SearchBar">
+<!-- Section 1 Search A City -->
+    <section id="searchACity">
+        <h1>Trouvez votre hébergement pour des vacances de rêves </h1>
+        <p>En plein centre-ville ou en pleine nature</p>
+        <div class="searchBar">
+            <div class="locationIcon">
+                <i class="fas fa-map-marker-alt"></i>
+            </div>
+            <form action="#" method="post">
+                <input class="champ" type="text" value="Marseille, France"/>
+            </form>
+            <div class="button">
+                <button type="submit">Rechercher</button>
+            </div>
+        </div> 
     </section>
 
 <!-- Section 2 Results -->
