Search Bar Optimisations + Aesthetic corrections

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     
     <!-- Font "Raleway" by Google Fonts-->
-    <style>@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');</style> 
+    <style> @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap'); </style> 
 
     <!-- fontawesome icon kit-->
     <script src="https://kit.fontawesome.com/71c57ed8eb.js" crossorigin="anonymous"></script>
@@ -34,7 +34,7 @@
     </header>
 
 <!-- Section 1 Search A City -->
-    <section id="searchACity">
+    <section id="sectionSearchCity">
         <h1>Trouvez votre hébergement pour des vacances de rêves </h1>
         <p>En plein centre-ville ou en pleine nature</p>
         <div class="searchBar">
@@ -42,7 +42,7 @@
                 <i class="fas fa-map-marker-alt"></i>
             </div>
             <form action="#" method="post">
-                <input class="champ" type="text" value="Marseille, France"/>
+                <input class="champ" type="text" placeholder="Tapez le nom d'une ville" autofocus/>
             </form>
             <div class="button">
                 <button type="submit">Rechercher</button>
