--- a/index.html
+++ b/index.html
@@ -51,7 +51,128 @@
     </section>
 
 <!-- Section 2 Results -->
-    <section id="Results">
+    <section id="results">
+        <div class="filter">
+            <h2>Filtres</h2>
+            <div class="filterButton">
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Économique</p>
+            </div>
+            <div class="filterButton">
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Familiale</p>
+            </div>
+            <div class="filterButton">
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Romantique</p>
+            </div>
+            <div class="filterButton">
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Animaux autorisés</p>
+            </div>
+        </div>
+        <div class="showResultNb">
+            <i class="fas fa-map-marker-alt"></i>    
+            <p>Plus de 500 logements sont disponibles dans cette ville</p>
+        </div>
+        <div class="accommodations">
+            <div class="accommodationsBox">
+                <h1>Hébergements à Marseille</h1>
+                <div class="accommodationAvailable">
+                    <div class = horizontalCards>
+                        <img src="images/Accommodations/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
+                        <div class=text>
+                            <h2>Auberge la Cannebière</h2>
+                            <p>Nuit à partir de <b>25€</b></p>
+                            <div class="Etoiles">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = horizontalCards>
+                        <img src="images/Accommodations/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
+                        <div class=text>
+                            <h2>Hôtel du port</h2>
+                            <p>Nuit à partir de <b>52€</b></p>
+                            <div class="Etoiles">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = horizontalCards>
+                        <img src="images/Accommodations/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
+                        <div class=text>
+                            <h2>Hôtel des mouettes</h2>
+                            <p>Nuit à partir de <b>76€</b></p>
+                            <div class="Etoiles">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = horizontalCards>
+                        <img src="images/Accommodations/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                        <div class=text>
+                            <h2>Hôtel de la mer</h2>
+                            <p>Nuit à partir de <b>46€</b></p>
+                            <div class="Etoiles">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = horizontalCards>
+                        <img src="images/Accommodations/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
+                        <div class=text>
+                            <h2>Auberge Le Panier</h2>
+                            <p>Nuit à partir de <b>23€</b></p>
+                            <div class="Etoiles">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class = horizontalCards>
+                        <img src="images/Accommodations/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
+                        <div class=text>
+                            <h2>Hôtel chez Amina</h2>
+                            <p>Nuit à partir de <b>96€</b></p>
+                            <div class="Etoiles">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a href="#">Afficher plus</a>
+            </div>
+            <div class="accommodationsBox">
+                <div class="accommodationPopular">
+                    <h1>Les plus populaires</h1>
+                    <i class="fas fa-map-marker-alt"></i>
+                </div>
+            </div>
+        </div>
     </section>
 
 <!-- Section 3 Activities -->
