--- a/index.html
+++ b/index.html
@@ -86,25 +86,25 @@
                             <h2>Auberge la Cannebière</h2>
                             <p>Nuit à partir de <b>25€</b></p>
                             <div class="stars">
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
                                 <div class="grey"><i class="fas fa-solid fa-star"></i></div>
                             </div>
-                        </div>
                     </div>
+                </div>
                     <div class = cards>
                         <img src="images/Accommodations/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
                         <div class=text>
                             <h2>Hôtel du port</h2>
                             <p>Nuit à partir de <b>52€</b></p>
                             <div class="stars">
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
                             </div>
                         </div>
                     </div>
@@ -114,10 +114,10 @@
                             <h2>Hôtel des mouettes</h2>
                             <p>Nuit à partir de <b>76€</b></p>
                             <div class="stars">
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
                                 <div class="grey"><i class="fas fa-solid fa-star"></i></div>
                             </div>
                         </div>
@@ -128,9 +128,9 @@
                             <h2>Hôtel de la mer</h2>
                             <p>Nuit à partir de <b>46€</b></p>
                             <div class="stars">
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
                                 <div class="grey"><i class="fas fa-solid fa-star"></i></div>
                                 <div class="grey"><i class="fas fa-solid fa-star"></i></div>
                             </div>
@@ -142,10 +142,10 @@
                             <h2>Auberge Le Panier</h2>
                             <p>Nuit à partir de <b>23€</b></p>
                             <div class="stars">
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="grey"><i class="fas fa-solid fa-star"></i></div>
                                 <div class="grey"><i class="fas fa-solid fa-star"></i></div>
                             </div>
                         </div>
@@ -156,11 +156,12 @@
                             <h2>Hôtel chez Amina</h2>
                             <p>Nuit à partir de <b>96€</b></p>
                             <div class="stars">
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+
                             </div>
                         </div>
                     </div>
@@ -170,46 +171,48 @@
             <div class="accommodationsBox">
 
                 <div class="accommodationPopular">
-                    <h1>Les plus populaires</h1>
+                    <div class="accommodationPopularTitle" >
+                        <h1>Les plus populaires</h1>
                         <i class="fas fa-solid fa-chart-line"></i>
+                    </div>
                     <div class = cards>
-                        <img src="images/Accommodations/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
+                        <img src="images/Accommodations/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="L'Hôtel Le soleil du matin à Marseille">
                         <div class=text>
                             <h2>Hôtel Le soleil du matin</h2>
                             <p>Nuit à partir de <b>128€</b></p>
                             <div class="stars">
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
                             </div>
                         </div>
                     </div>
                     <div class = cards>
-                        <img src="images/Accommodations/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
+                        <img src="images/Accommodations/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau à Marseille">
                         <div class=text>
                             <h2>Au coeur de l'eau Chambres d'hôtes</h2>
                             <p>Nuit à partir de <b>71€</b></p>
                             <div class="stars">
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
                                 <div class="grey"><i class="fas fa-solid fa-star"></i></div>
                             </div>
                         </div>
                     </div>
                     <div class = cards>
-                        <img src="images/Accommodations/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
+                        <img src="images/Accommodations/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
                         <div class=text>
                             <h2>Hôtel Tout bleu et Blanc</h2>
                             <p>Nuit à partir de <b>68€</b></p>
                             <div class="stars">
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
-                                <i class="fas fa-solid fa-star"></i>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
                                 <div class="grey"><i class="fas fa-solid fa-star"></i></div>
                             </div>
                         </div>
