Optimisations : Header (Pos.Fixed+blue active bar)

--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
         <div class="logo">
             <img src="images/Reservia.svg">
         </div>
-        <div class="navBar">
-            <li>
+            <li id="navBar">
                 <ul><a href="#">Hébergements</a></ul>
                 <ul><a href="#">Activités</a></ul>
                 <ul class="subscribeLink"><a href="#">S'inscrire</a></ul>
             </li>
-        </div>
     </header>
 
 <!-- Section 1 Search A City -->
