--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <img src="images/Reservia.svg">
         </div>
             <li id="navBar">
-                <ul><a href="#">Hébergements</a></ul>
-                <ul><a href="#">Activités</a></ul>
+                <ul><a href="#results">Hébergements</a></ul>
+                <ul><a href="#activities">Activités</a></ul>
                 <ul class="subscribeLink"><a href="#">S'inscrire</a></ul>
             </li>
     </header>
