Header -> Clickable Logo to the Top

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- Header : Logo and nav bar -->
     <header>
         <div class="logo">
-            <img src="images/Reservia.svg">
+            <a href="#top"><img src="images/Reservia.svg"/></a> 
         </div>
             <li id="navBar">
                 <ul><a href="#results">Hébergements</a></ul>
