--- a/index.html
+++ b/index.html
@@ -38,24 +38,26 @@
         <section id="section1">
             <h1>Trouvez votre hébergement pour des vacances de rêves </h1>
             <p>En plein centre-ville ou en pleine nature</p>
-            <div class="searchBar">
-                <div class="locationIcon">
-                    <i class="fas fa-map-marker-alt"></i>
-                </div>
-                <form action="#" method="post">
-                    <input class="champ" type="text" placeholder="Tapez le nom d'une ville" autofocus/>
-                </form>
-                <div class="button">
+    <!-- Search Bar -->
+            <div class="searchBarContainer">        
+                <div class="searchBar">
+                    <div class="locationIcon">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <form action="#" method="post">
+                        <input class="champ" type="text" placeholder="Tapez le nom d'une ville" autofocus/>
+                    </form>
                     <button type="submit">
-                        <span class="texte">Rechercher</span>
-                        <span class="icon"><i class="fas fa-search"></i></span>
+                            <span class="web">Rechercher</span>
+                            <span class="mobile"><i class="fas fa-search"></i></span>
                     </button>
                 </div>
             </div>
         </section>
 
 <!-- Section 2 Results -->
-        <section id="results">
+        <section id="section2">
+    <!-- Filters -->
             <div class="filter">
                 <h2>Filtres</h2>
                 <div class="filterButton">
@@ -75,6 +77,7 @@
                     <p>Animaux autorisés</p>
                 </div>
             </div>
+    <!-- Number of Accomodations -->
             <div class="showResultNb">
                 <i class="fas fa-solid fa-info"></i>   
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
@@ -82,7 +85,7 @@
             <div class="accommodations">
                 <div class="accommodationsBox">
                     <h1>Hébergements à Marseille</h1>
-
+    <!-- Accomodations : Available -->
                     <div class="accommodationAvailable">
                         <div class = cards>
                             <img src="images/Accommodations/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
@@ -165,7 +168,6 @@
                                     <div class="blue"><i class="fas fa-solid fa-star"></i></div>
                                     <div class="blue"><i class="fas fa-solid fa-star"></i></div>
                                     <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-
                                 </div>
                             </div>
                         </div>
@@ -173,7 +175,7 @@
                     <a href="#">Afficher plus</a>
                 </div>
                 <div class="accommodationsBox">
-
+        <!-- Accomodations : Available -->
                     <div class="accommodationPopular">
                         <div class="accommodationPopularTitle" >
                             <h1>Les plus populaires</h1>
@@ -226,7 +228,7 @@
         </section>
 
 <!-- Section 3 Activities -->
-        <section id="activities">
+        <section id="section3">
             <h1>Activités à Marseille</h1>
             <div class="activitiesBox">
                 <div class="column1">
@@ -264,6 +266,7 @@
             </div>
         </section>
     </div>
+
 <!-- Footer -->
     <footer>
         <div class="siteWidth">
