Add the Mobile's Header

--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
 </head>
 
 <body>
-
-<!-- Header : Logo and nav bar -->
-    <header>
-        <div class="siteWidth">
-            <div class="headerContent">
+<!-- HEADER WEB -->
+    <header class="web">
+        <div class="webHeader">
                 <div class="logo">
                     <a href="#top"><img src="images/Reservia.svg"/></a> 
                 </div>
-                <nav>
+                <nav class="web">
                     <ul>
                         <li><a href="#results">Hébergements</a></li>
                         <li><a href="#activities">Activités</a></li>
@@ -30,7 +28,24 @@
                     </ul>
                 </nav>
             </div>
+    </header>
+
+<!-- HEADER MOBILE -->
+    <header class="mobile">
+        <div class="mobileHeader">
+            <div class="logo">
+                <a href="#top"><img src="images/Reservia.svg"/></a> 
+            </div>
+                <ul>
+                    <li class="subscribeLink"><a href="#">S'inscrire</a></li>
+                </ul>
         </div>
+            <nav class="mobile">
+                <ul>
+                    <li><a href="#section2">Hébergements</a></li>
+                    <li><a href="#section3">Activités</a></li>
+                </ul>
+            </nav>
     </header>
 
 <div class="siteWidth">
