--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 </div>
                 <nav class="web">
                     <ul>
-                        <li><a href="#results">Hébergements</a></li>
-                        <li><a href="#activities">Activités</a></li>
+                        <li><a href="#section2">Hébergements</a></li>
+                        <li><a href="#section3">Activités</a></li>
                         <li class="subscribeLink"><a href="#">S'inscrire</a></li>
                     </ul>
                 </nav>
@@ -42,7 +42,7 @@
         </div>
             <nav class="mobile">
                 <ul>
-                    <li><a href="#section2">Hébergements</a></li>
+                    <li><a href="#accommodationAvailable">Hébergements</a></li>
                     <li><a href="#section3">Activités</a></li>
                 </ul>
             </nav>
@@ -97,12 +97,13 @@
                 <i class="fas fa-solid fa-info"></i>   
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
+</div>  
             <div class="accommodations">
                 <div class="accommodationsBox">
                     <h1>Hébergements à Marseille</h1>
     <!-- Accomodations : Available -->
-                    <div class="accommodationAvailable">
-                        <div class = cards>
+                    <div id="accommodationAvailable">
+                        <a href="#"><div class="cards">
                             <img src="images/Accommodations/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
                             <div class=text>
                                 <h2>Auberge la Cannebière</h2>
@@ -114,9 +115,9 @@
                                     <div class="blue"><i class="fas fa-solid fa-star"></i></div>
                                     <div class="grey"><i class="fas fa-solid fa-star"></i></div>
                                 </div>
-                        </div>
-                    </div>
-                        <div class = cards>
+                            </div>
+                        </div></a>
+                        <a href="#"><div class="cards">
                             <img src="images/Accommodations/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
                             <div class=text>
                                 <h2>Hôtel du port</h2>
@@ -129,8 +130,8 @@
                                     <div class="blue"><i class="fas fa-solid fa-star"></i></div>
                                 </div>
                             </div>
-                        </div>
-                        <div class = cards>
+                        </div></a>
+                        <a href="#"><div class="cards">
                             <img src="images/Accommodations/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
                             <div class=text>
                                 <h2>Hôtel des mouettes</h2>
@@ -143,8 +144,8 @@
                                     <div class="grey"><i class="fas fa-solid fa-star"></i></div>
                                 </div>
                             </div>
-                        </div>
-                        <div class = cards>
+                        </div></a>
+                        <a href="#"><div class="cards">
                             <img src="images/Accommodations/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
                             <div class=text>
                                 <h2>Hôtel de la mer</h2>
@@ -157,8 +158,8 @@
                                     <div class="grey"><i class="fas fa-solid fa-star"></i></div>
                                 </div>
                             </div>
-                        </div>
-                        <div class = cards>
+                        </div></a>
+                        <a href="#"><div class="cards">
                             <img src="images/Accommodations/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
                             <div class=text>
                                 <h2>Auberge Le Panier</h2>
@@ -171,8 +172,8 @@
                                     <div class="grey"><i class="fas fa-solid fa-star"></i></div>
                                 </div>
                             </div>
-                        </div>
-                        <div class = cards>
+                        </div></a>
+                        <a href="#"><div class="cards">
                             <img src="images/Accommodations/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
                             <div class=text>
                                 <h2>Hôtel chez Amina</h2>
@@ -185,63 +186,64 @@
                                     <div class="blue"><i class="fas fa-solid fa-star"></i></div>
                                 </div>
                             </div>
-                        </div>
+                        </div></a>
                     </div>
                     <a href="#">Afficher plus</a>
                 </div>
                 <div class="accommodationsBox">
-        <!-- Accomodations : Available -->
-                    <div class="accommodationPopular">
-                        <div class="accommodationPopularTitle" >
-                            <h1>Les plus populaires</h1>
-                            <i class="fas fa-solid fa-chart-line"></i>
-                        </div>
-                        <div class = cards>
-                            <img src="images/Accommodations/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="L'Hôtel Le soleil du matin à Marseille">
-                            <div class=text>
-                                <h2>Hôtel Le soleil du matin</h2>
-                                <p>Nuit à partir de <b>128€</b></p>
-                                <div class="stars">
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                </div>
+        <!-- Accomodations : Popular -->
+                        <div class="accommodationPopular">
+                            <div class="accommodationPopularTitle" >
+                                <h1>Les plus populaires</h1>
+                                <i class="fas fa-solid fa-chart-line"></i>
                             </div>
-                        </div>
-                        <div class = cards>
-                            <img src="images/Accommodations/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau à Marseille">
-                            <div class=text>
-                                <h2>Au coeur de l'eau Chambres d'hôtes</h2>
-                                <p>Nuit à partir de <b>71€</b></p>
-                                <div class="stars">
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                    <div class="grey"><i class="fas fa-solid fa-star"></i></div>
+                            <a href="#"><div class="cards">
+                                <img src="images/Accommodations/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="L'Hôtel Le soleil du matin à Marseille">
+                                <div class=text>
+                                    <h2>Hôtel Le soleil du matin</h2>
+                                    <p>Nuit à partir de <b>128€</b></p>
+                                    <div class="stars">
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class = cards>
-                            <img src="images/Accommodations/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
-                            <div class=text>
-                                <h2>Hôtel Tout bleu et Blanc</h2>
-                                <p>Nuit à partir de <b>68€</b></p>
-                                <div class="stars">
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                    <div class="grey"><i class="fas fa-solid fa-star"></i></div>
+                            </div></a>
+                            <a href="#"><div class="cards">
+                                <img src="images/Accommodations/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau à Marseille">
+                                <div class=text>
+                                    <h2>Au coeur de l'eau Chambres d'hôtes</h2>
+                                    <p>Nuit à partir de <b>71€</b></p>
+                                    <div class="stars">
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                        <div class="grey"><i class="fas fa-solid fa-star"></i></div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>                    
+                            </div></a>
+                            <a href="#"><div class="cards">
+                                <img src="images/Accommodations/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
+                                <div class=text>
+                                    <h2>Hôtel Tout bleu et Blanc</h2>
+                                    <p>Nuit à partir de <b>68€</b></p>
+                                    <div class="stars">
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                        <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                        <div class="grey"><i class="fas fa-solid fa-star"></i></div>
+                                    </div>
+                                </div>
+                            </div></a>                    
+                        </div>
                     </div>
                 </div>
         </section>
-
+<div class="siteWidth">
 <!-- Section 3 Activities -->
         <section id="section3">
             <h1>Activités à Marseille</h1>
