Optimise Activities on Mobile

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </section>
 
-<!-- Section 2 Results -->
+<!-- Section 2 - Results -->
         <section id="section2">
     <!-- Filters -->
             <div class="filter">
@@ -244,45 +244,73 @@
                 </div>
         </section>
 <div class="siteWidth">
-<!-- Section 3 Activities -->
-        <section id="section3">
-            <h1>Activités à Marseille</h1>
-            <div class="activitiesBox">
-                <div class="column1">
-                    <div class="cards">
-                        <img src="images/Activities/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port à Marseille">
-                        <h2>Vieux Port</h2>
-                    </div>
-                </div>
-                <div class="column2">
-                    <div class="cards">
-                        <img class="img1" src="images/Activities/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Le Fort de Pomègues près de Marseille">
-                        <h2>Fort de Pomègues</h2>
-                    </div>
-                    <div class="cards">
-                        <img class="img2" src="images/Activities/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Les Îles du Frioul près de Marseille">
-                        <h2>Îles du Frioul</h2>
-                    </div>
-                </div>
-                <div class="column1">
-                    <div class="cards">
-                        <img src="images/Activities/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Le Parc National des Calanques près de Marseille">
-                        <h2>Parc National des Calanques</h2>
-                    </div>
-                </div>
-                <div class="column4">
-                    <div class="cards">
-                        <img class="img3" src="images/Activities/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde à Marseille">
-                        <h2>Notre-Dame-de-la-Garde</h2>
-                    </div>
-                    <div class="cards">
-                        <img class="img4" src="images/Activities/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Le Parc Longchamp à Marseille">
-                        <h2>Parc Longchamp</h2>
-                    </div>
-                </div>
+
+<!-- Section 3 - activities -->
+<section id="section3" class="web">
+    <h1>Activités à Marseille</h1>
+    <div class="activitiesBox">
+        <div class="activitiesColumn">
+            <div class="activitiesCards">
+                <img src="images/Activities/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port à Marseille">
+                <h2>Vieux Port</h2>
             </div>
-        </section>
+        </div>
+        <div class="activitiesColumn">
+            <div class="activitiesCards">
+                <img src="images/Activities/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Le Fort de Pomègues près de Marseille">
+                <h2>Fort de Pomègues</h2>
+            </div>
+            <div class="activitiesCards">
+                <img src="images/Activities/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Les Îles du Frioul près de Marseille">
+                <h2>Îles du Frioul</h2>
+            </div>
+        </div>
+        <div class="activitiesColumn">
+            <div class="activitiesCards">
+                <img src="images/Activities/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Le Parc National des Calanques près de Marseille">
+                <h2>Parc National des Calanques</h2>
+            </div>
+        </div>
+        <div class="activitiesColumn">
+            <div class="activitiesCards">
+                <img src="images/Activities/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde à Marseille">
+                <h2>Notre-Dame-de-la-Garde</h2>
+            </div>
+            <div class="activitiesCards">
+                <img src="images/Activities/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Le Parc Longchamp à Marseille">
+                <h2>Parc Longchamp</h2>
+            </div>
+        </div>
     </div>
+</section>
+
+<section id="section3" class="mobile">
+    <h1>Activités à Marseille</h1>
+    <div class="activitiesCards">
+                <img src="images/Activities/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port à Marseille">
+                <h2>Vieux Port</h2>
+    </div>
+    <div class="activitiesCards">
+        <img src="images/Activities/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Le Fort de Pomègues près de Marseille">
+        <h2>Fort de Pomègues</h2>
+    </div>
+    <div class="activitiesCards">
+        <img src="images/Activities/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Les Îles du Frioul près de Marseille">
+        <h2>Îles du Frioul</h2>
+    </div>
+    <div class="activitiesCards">
+        <img src="images/Activities/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Le Parc National des Calanques près de Marseille">
+        <h2>Parc National des Calanques</h2>
+    </div>
+    <div class="activitiesCards">
+        <img src="images/Activities/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde à Marseille">
+        <h2>Notre-Dame-de-la-Garde</h2>
+    </div>
+    <div class="activitiesCards">
+        <img src="images/Activities/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Le Parc Longchamp à Marseille">
+        <h2>Parc Longchamp</h2>
+    </div>
+</section>
 
 <!-- Footer -->
     <footer>
