Footer Optimisation (Mobile)

--- a/index.html
+++ b/index.html
@@ -244,7 +244,6 @@
                 </div>
         </section>
 <div class="siteWidth">
-
 <!-- Section 3 - activities -->
 <section id="section3" class="web">
     <h1>Activités à Marseille</h1>
@@ -311,33 +310,31 @@
         <h2>Parc Longchamp</h2>
     </div>
 </section>
-
+</div>
 <!-- Footer -->
     <footer>
-        <div class="siteWidth">
-            <div class="widthSite">
-                <div id="footerColumn">
-                    <h2>A propos</h2>
-                    <ul>
-                        <li><a href="#">Fonctionnement du site</a></li>
-                        <li><a href="#">Conditions générales de vente</a></li>
-                        <li><a href="#">Données et confidentialité</a></li>
-                    </ul>
-                </div>
-                <div id="footerColumn">
-                    <h2>Nos hébergements</h2>
-                    <ul>
-                        <li><a href="#">Charte qualité</a></li>
-                        <li><a href="#">Soumettre votre hôtel</a></li>
-                    </ul>
-                </div>
-                <div id="footerColumn">
-                    <h2>Assistance</h2>
-                    <ul>
-                        <li><a href="#">Centre d'aide</a></li>
-                        <li><a href="#">Nous contacter</a></li>
-                    </ul>
-                </div>
+        <div class="footerContainer">
+            <div id="footerColumn">
+                <h2>A propos</h2>
+                <ul>
+                    <li><a href="#">Fonctionnement du site</a></li>
+                    <li><a href="#">Conditions générales de vente</a></li>
+                    <li><a href="#">Données et confidentialité</a></li>
+                </ul>
+            </div>
+            <div id="footerColumn">
+                <h2>Nos hébergements</h2>
+                <ul>
+                    <li><a href="#">Charte qualité</a></li>
+                    <li><a href="#">Soumettre votre hôtel</a></li>
+                </ul>
+            </div>
+            <div id="footerColumn">
+                <h2>Assistance</h2>
+                <ul>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
+                </ul>
             </div>
         </div>
     </footer>
