Responsive : Tablet Version

--- a/index.html
+++ b/index.html
@@ -245,69 +245,70 @@
         </section>
 <div class="siteWidth">
 <!-- Section 3 - activities -->
-<section id="section3" class="web">
-    <h1>Activités à Marseille</h1>
-    <div class="activitiesBox">
-        <div class="activitiesColumn">
-            <div class="activitiesCards">
-                <img src="images/Activities/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port à Marseille">
-                <h2>Vieux Port</h2>
+<section id="section3">
+    <div class="web">
+        <h1>Activités à Marseille</h1>
+        <div class="activitiesBox">
+            <div class="activitiesColumn">
+                <div class="activitiesCards">
+                    <img src="images/Activities/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port à Marseille">
+                    <h2>Vieux Port</h2>
+                </div>
+            </div>
+            <div class="activitiesColumn">
+                <div class="activitiesCards">
+                    <img src="images/Activities/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Le Fort de Pomègues près de Marseille">
+                    <h2>Fort de Pomègues</h2>
+                </div>
+                <div class="activitiesCards">
+                    <img src="images/Activities/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Les Îles du Frioul près de Marseille">
+                    <h2>Îles du Frioul</h2>
+                </div>
+            </div>
+            <div class="activitiesColumn">
+                <div class="activitiesCards">
+                    <img src="images/Activities/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Le Parc National des Calanques près de Marseille">
+                    <h2>Parc National des Calanques</h2>
+                </div>
+            </div>
+            <div class="activitiesColumn">
+                <div class="activitiesCards">
+                    <img src="images/Activities/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde à Marseille">
+                    <h2>Notre-Dame-de-la-Garde</h2>
+                </div>
+                <div class="activitiesCards">
+                    <img src="images/Activities/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Le Parc Longchamp à Marseille">
+                    <h2>Parc Longchamp</h2>
+                </div>
             </div>
         </div>
-        <div class="activitiesColumn">
-            <div class="activitiesCards">
-                <img src="images/Activities/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Le Fort de Pomègues près de Marseille">
-                <h2>Fort de Pomègues</h2>
-            </div>
-            <div class="activitiesCards">
-                <img src="images/Activities/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Les Îles du Frioul près de Marseille">
-                <h2>Îles du Frioul</h2>
-            </div>
+    </div>
+    <div class="mobile">
+        <h1 >Activités à Marseille</h1>
+        <div class="activitiesCards">
+                    <img src="images/Activities/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port à Marseille">
+                    <h2>Vieux Port</h2>
         </div>
-        <div class="activitiesColumn">
-            <div class="activitiesCards">
-                <img src="images/Activities/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Le Parc National des Calanques près de Marseille">
-                <h2>Parc National des Calanques</h2>
-            </div>
+        <div class="activitiesCards">
+            <img src="images/Activities/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Le Fort de Pomègues près de Marseille">
+            <h2>Fort de Pomègues</h2>
         </div>
-        <div class="activitiesColumn">
-            <div class="activitiesCards">
-                <img src="images/Activities/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde à Marseille">
-                <h2>Notre-Dame-de-la-Garde</h2>
-            </div>
-            <div class="activitiesCards">
-                <img src="images/Activities/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Le Parc Longchamp à Marseille">
-                <h2>Parc Longchamp</h2>
-            </div>
+        <div class="activitiesCards">
+            <img src="images/Activities/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Les Îles du Frioul près de Marseille">
+            <h2>Îles du Frioul</h2>
         </div>
-    </div>
-</section>
-
-<section id="section3" class="mobile">
-    <h1>Activités à Marseille</h1>
-    <div class="activitiesCards">
-                <img src="images/Activities/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port à Marseille">
-                <h2>Vieux Port</h2>
-    </div>
-    <div class="activitiesCards">
-        <img src="images/Activities/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Le Fort de Pomègues près de Marseille">
-        <h2>Fort de Pomègues</h2>
-    </div>
-    <div class="activitiesCards">
-        <img src="images/Activities/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Les Îles du Frioul près de Marseille">
-        <h2>Îles du Frioul</h2>
-    </div>
-    <div class="activitiesCards">
-        <img src="images/Activities/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Le Parc National des Calanques près de Marseille">
-        <h2>Parc National des Calanques</h2>
-    </div>
-    <div class="activitiesCards">
-        <img src="images/Activities/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde à Marseille">
-        <h2>Notre-Dame-de-la-Garde</h2>
-    </div>
-    <div class="activitiesCards">
-        <img src="images/Activities/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Le Parc Longchamp à Marseille">
-        <h2>Parc Longchamp</h2>
+        <div class="activitiesCards">
+            <img src="images/Activities/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Le Parc National des Calanques près de Marseille">
+            <h2>Parc National des Calanques</h2>
+        </div>
+        <div class="activitiesCards">
+            <img src="images/Activities/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde à Marseille">
+            <h2>Notre-Dame-de-la-Garde</h2>
+        </div>
+        <div class="activitiesCards">
+            <img src="images/Activities/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Le Parc Longchamp à Marseille">
+            <h2>Parc Longchamp</h2>
+        </div>
     </div>
 </section>
 </div>
