HTML/CSS Corrections after Validator W3

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="web">
         <div class="webHeader">
                 <div class="logo">
-                    <a href="#top"><img src="images/Reservia.svg"/></a> 
+                    <a href="#top"><img src="images/Reservia.svg" alt="Logo de l'entreprise Reservia"/></a> 
                 </div>
                 <nav class="web">
                     <ul>
@@ -34,7 +34,7 @@
     <header class="mobile">
         <div class="mobileHeader">
             <div class="logo">
-                <a href="#top"><img src="images/Reservia.svg"/></a> 
+                <a href="#top"><img src="images/Reservia.svg" alt="Logo de l'entreprise Reservia"/></a> 
             </div>
                 <ul>
                     <li class="subscribeLink"><a href="#">S'inscrire</a></li>
@@ -100,7 +100,7 @@
 </div>  
             <div class="accommodations">
                 <div class="accommodationsBox">
-                    <h1>Hébergements à Marseille</h1>
+                    <h2>Hébergements à Marseille</h2>
     <!-- Accomodations : Available -->
                     <div id="accommodationAvailable">
                         <a href="#"><div class="cards">
@@ -194,7 +194,7 @@
         <!-- Accomodations : Popular -->
                         <div class="accommodationPopular">
                             <div class="accommodationPopularTitle" >
-                                <h1>Les plus populaires</h1>
+                                <h2>Les plus populaires</h2>
                                 <i class="fas fa-solid fa-chart-line"></i>
                             </div>
                             <a href="#"><div class="cards">
@@ -247,7 +247,7 @@
 <!-- Section 3 - activities -->
 <section id="section3">
     <div class="web">
-        <h1>Activités à Marseille</h1>
+        <h2>Activités à Marseille</h2>
         <div class="activitiesBox">
             <div class="activitiesColumn">
                 <div class="activitiesCards">
@@ -284,7 +284,7 @@
         </div>
     </div>
     <div class="mobile">
-        <h1 >Activités à Marseille</h1>
+        <h2>Activités à Marseille</h2>
         <div class="activitiesCards">
                     <img src="images/Activities/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port à Marseille">
                     <h2>Vieux Port</h2>
@@ -315,7 +315,7 @@
 <!-- Footer -->
     <footer>
         <div class="footerContainer">
-            <div id="footerColumn">
+            <div class="footerColumn">
                 <h2>A propos</h2>
                 <ul>
                     <li><a href="#">Fonctionnement du site</a></li>
@@ -323,14 +323,14 @@
                     <li><a href="#">Données et confidentialité</a></li>
                 </ul>
             </div>
-            <div id="footerColumn">
+            <div class="footerColumn">
                 <h2>Nos hébergements</h2>
                 <ul>
                     <li><a href="#">Charte qualité</a></li>
                     <li><a href="#">Soumettre votre hôtel</a></li>
                 </ul>
             </div>
-            <div id="footerColumn">
+            <div class="footerColumn">
                 <h2>Assistance</h2>
                 <ul>
                     <li><a href="#">Centre d'aide</a></li>
