HTML : Error Corrections

--- a/index.html
+++ b/index.html
@@ -208,20 +208,22 @@
                             </div>
                         </div>
                     </div></a>
-                    <a href="#"><div class="cards">
-                        <img src="images/Accommodations/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
-                        <div class=text>
-                            <h2>Hôtel Tout bleu et Blanc</h2>
-                            <p>Nuit à partir de <b>68€</b></p>
-                            <div class="stars">
-                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                <div class="blue"><i class="fas fa-solid fa-star"></i></div>
-                                <div class="grey"><i class="fas fa-solid fa-star"></i></div>
+                    <a href="#">
+                        <div class="cards">
+                            <img src="images/Accommodations/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="L'Auberge la Cannebière à Marseille">
+                            <div class=text>
+                                <h2>Hôtel Tout bleu et Blanc</h2>
+                                <p>Nuit à partir de <b>68€</b></p>
+                                <div class="stars">
+                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                    <div class="blue"><i class="fas fa-solid fa-star"></i></div>
+                                    <div class="grey"><i class="fas fa-solid fa-star"></i></div>
+                                </div>
                             </div>
                         </div>
-                    </div></a>                    
+                    </a>                    
                 </div>
             </div>
         </div>
@@ -232,36 +234,48 @@
             <h2>Activités à Marseille</h2>
             <div class="activitiesBox">
                 <div class="activitiesColumn">
-                    <a href="#"><div class="activitiesCards">
-                        <img src="images/Activities/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port à Marseille">
-                        <h2>Vieux Port</h2>
-                    </a></div>
+                    <a href="#">
+                        <div class="activitiesCards">
+                            <img src="images/Activities/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port à Marseille">
+                            <h2>Vieux Port</h2>
+                        </div>
+                    </a>
                 </div>
                 <div class="activitiesColumn">
-                    <a href="#"><div class="activitiesCards">
-                        <img src="images/Activities/paul-hermann-QFTrLdQIRhI-unsplash2.jpg" alt="Le Fort de Pomègues près de Marseille">
-                        <h2>Fort de Pomègues</h2>
-                    </a></div>
-                    <a href="#"><div class="activitiesCards">
-                        <img src="images/Activities/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Les Îles du Frioul près de Marseille">
-                        <h2>Îles du Frioul</h2>
-                    </a></div>
+                    <a href="#">
+                        <div class="activitiesCards">
+                            <img src="images/Activities/paul-hermann-QFTrLdQIRhI-unsplash2.jpg" alt="Le Fort de Pomègues près de Marseille">
+                            <h2>Fort de Pomègues</h2>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="activitiesCards">
+                            <img src="images/Activities/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Les Îles du Frioul près de Marseille">
+                            <h2>Îles du Frioul</h2>
+                        </div>
+                    </a>
                 </div>
                 <div class="activitiesColumn">
-                    <a href="#"><div class="activitiesCards">
-                        <img src="images/Activities/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Le Parc National des Calanques près de Marseille">
-                        <h2>Parc National des Calanques</h2>
-                    </a></div>
+                    <a href="#">
+                        <div class="activitiesCards">
+                            <img src="images/Activities/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Le Parc National des Calanques près de Marseille">
+                            <h2>Parc National des Calanques</h2>
+                        </div>
+                    </a>
                 </div>
                 <div class="activitiesColumn">
-                    <a href="#"><div class="activitiesCards">
-                        <img src="images/Activities/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde à Marseille">
-                        <h2>Notre-Dame-de-la-Garde</h2>
-                    </a></div>
-                    <a href="#"><div class="activitiesCards">
-                        <img src="images/Activities/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Le Parc Longchamp à Marseille">
-                        <h2>Parc Longchamp</h2>
-                    </a></div>
+                    <a href="#">
+                        <div class="activitiesCards">
+                            <img src="images/Activities/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde à Marseille">
+                            <h2>Notre-Dame-de-la-Garde</h2>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="activitiesCards">
+                            <img src="images/Activities/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Le Parc Longchamp à Marseille">
+                            <h2>Parc Longchamp</h2>
+                        </div>
+                    </a>
                 </div>
             </div>
     </section>
