HTML Correction (Error Span)

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                     <i class="fas fa-map-marker-alt"></i>
                 </div>
                 <form action="#" method="post">
-                    <span class="web"><input type="text" placeholder="Tapez le nom d'une ville" autofocus/></span>
-                    <span class="mobile"><input type="text" placeholder="Tapez une ville" autofocus/></span>
+                    <input type="text" placeholder="Tapez une ville" autofocus/>
                 </form>
                 <button type="submit">
                     <span class="web">Rechercher</span>
